[gd_scene load_steps=4 format=3 uid="uid://c2vorq2k1b8aa"]

[ext_resource type="Script" path="res://Entity/Components/AI/detectionarea_component.gd" id="1_mutkw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lp6lx"]
radius = 47.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uk1sn"]
radius = 23.0

[node name="DetectionArea_Component" type="Node2D"]
script = ExtResource("1_mutkw")

[node name="DetectionStart" type="Area2D" parent="."]

[node name="DetectionStart_Range" type="CollisionShape2D" parent="DetectionStart"]
shape = SubResource("CircleShape2D_lp6lx")

[node name="DetectionEnd" type="Area2D" parent="."]

[node name="DetectionEnd_Range" type="CollisionShape2D" parent="DetectionEnd"]
shape = SubResource("CircleShape2D_uk1sn")

[connection signal="body_entered" from="DetectionStart" to="." method="_on_detection_start_body_entered"]
[connection signal="body_exited" from="DetectionEnd" to="." method="_on_detection_end_body_exited"]
